--- a/rviz_plugins/hubo_dashboard/package.xml
+++ b/rviz_plugins/hubo_dashboard/package.xml
@@ -2,30 +2,31 @@
 <package>
   <name>hubo_dashboard</name>
   <version>0.0.0</version>
-  <description>The hubo_dashboard package</description>
+  <description> A RVIZ panel plugin that contains simple indications of the Hubo robot's health. May one day be split into unique plugins for use with different robots. </description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="nick@todo.todo">nick</maintainer>
+  <maintainer email="nick.alunni@gmail.com">Nicholas Alunni</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>BSD</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://ros.org/wiki/hubo_dashboard</url> -->
+  <!-- <url type="website">http://ros.org/wiki/hubo_init</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="nick.alunni@gmail.com">Nicholas Alunni</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
@@ -49,11 +50,7 @@
 
 
   <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
-
+   <export>
+    <rviz plugin="${prefix}/plugin_description.xml"/>
   </export>
 </package>
