--- a/localization_marker_msgs/CMakeLists.txt
+++ b/localization_marker_msgs/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(localization_markers)
+project(localization_marker_msgs)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp rospy tf interactive_markers pcl pcl_ros geometry_msgs sensor_msgs std_msgs localization_marker_msgs message_generation)
+find_package(catkin REQUIRED COMPONENTS geometry_msgs message_generation sensor_msgs std_msgs)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -19,13 +19,27 @@ find_package(catkin REQUIRED COMPONENTS roscpp rospy tf interactive_markers pcl 
 ## Declare ROS messages and services ##
 #######################################
 
+## Generate messages in the 'msg' folder
+add_message_files(
+  DIRECTORY
+  msg
+  FILES
+  set_localization_marker.msg
+)
+
+## Generate services in the 'srv' folder
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
+
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
   geometry_msgs
   sensor_msgs
   std_msgs
-  localization_marker_msgs
 )
 
 ###################################
@@ -38,8 +52,9 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-  CATKIN_DEPENDS roscpp rospy tf interactive_markers pcl pcl_ros geometry_msgs sensor_msgs std_msgs localization_marker_msgs message_runtime
-  DEPENDS system_lib
+#  LIBRARIES localization_marker_msgs
+  CATKIN_DEPENDS geometry_msgs message_runtime sensor_msgs std_msgs
+#  DEPENDS system_lib
 )
 
 ###########
@@ -48,27 +63,24 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(include
-  ${catkin_INCLUDE_DIRS}
-)
+# include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 ## Declare a cpp library
-# add_library(localization_markers
-#   src/${PROJECT_NAME}/localization_markers.cpp
+# add_library(localization_marker_msgs
+#   src/${PROJECT_NAME}/localization_marker_msgs.cpp
 # )
 
 ## Declare a cpp executable
-add_executable(localization_marker_server src/localization_marker_server.cpp)
-add_dependencies(localization_marker_server localization_marker_msgs_generate_message_cpp)
+# add_executable(localization_marker_msgs_node src/localization_marker_msgs_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(localization_markers_node localization_markers_generate_messages_cpp)
+# add_dependencies(localization_marker_msgs_node localization_marker_msgs_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(localization_marker_server
-   ${catkin_LIBRARIES}
-)
+# target_link_libraries(localization_marker_msgs_node
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
@@ -85,7 +97,7 @@ target_link_libraries(localization_marker_server
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS localization_markers localization_markers_node
+# install(TARGETS localization_marker_msgs localization_marker_msgs_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -95,22 +107,22 @@ target_link_libraries(localization_marker_server
 # install(DIRECTORY include/${PROJECT_NAME}/
 #   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 #   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".sadd_executable(feedback src/hubo_ros_feedback.cpp)vn" EXCLUDE
+#   PATTERN ".svn" EXCLUDE
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-install(FILES
-  launch/localization_marker_demo_valve.launch
-  launch/localization_marker_turtlebot_sim.launch
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+# install(FILES
+#   # myfile1
+#   # myfile2
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
 
 #############
 ## Testing ##
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_localization_markers.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_localization_marker_msgs.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
