--- a/localization_markers/package.xml
+++ b/localization_markers/package.xml
@@ -55,6 +55,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>localization_marker_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
 
@@ -66,6 +67,7 @@
   <run_depend>pcl_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>localization_marker_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>eigen</run_depend>
   <run_depend>message_runtime</run_depend>
