--- a/rviz_plugins/hubo_sensor_control/package.xml
+++ b/rviz_plugins/hubo_sensor_control/package.xml
@@ -47,9 +47,12 @@
   <build_depend>rospy</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rviz</build_depend>
+  <build_depend>teleop_msgs</build_depend>
+
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rviz</run_depend>
+  <run_depend>teleop_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
