--- a/gui_robot_control/package.xml
+++ b/gui_robot_control/package.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0"?>
 <package>
-  <name>localization_marker_msgs</name>
+  <name>gui_robot_control</name>
   <version>0.0.1</version>
-  <description>The localization_marker_msgs package</description>
-  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
+  <description>The gui robot control</description>
+  <maintainer email="nick.alunni@gmail.com">Nicholas Alunni</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>roscpp</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
+  <build_depend>rosgraph_msgs</build_depend>
 
+  <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>rosgraph_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
