--- a/rviz_plugins/hubo_sensor_control/CMakeLists.txt
+++ b/rviz_plugins/hubo_sensor_control/CMakeLists.txt
@@ -4,7 +4,7 @@ project(hubo_sensor_control)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED teleop_msgs)
+find_package(catkin REQUIRED teleop_msgs message_generation)
 
 
 ## This plugin includes Qt widgets, so we must include Qt like so:
@@ -15,8 +15,8 @@ include(${QT_USE_FILE})
 catkin_package(
     INCLUDE_DIRS include
     LIBRARIES ${PROJECT_NAME}
-    CATKIN_DEPENDS roscpp rospy teleop_msgs
-    DEPENDS QtCore QtGui )
+    CATKIN_DEPENDS roscpp rospy teleop_msgs message_runtime
+    DEPENDS systemlib QtCore QtGui )
 
 ## Here we specify which header files need to be run through "moc",
 ## Qt's meta-object compiler.
@@ -47,14 +47,6 @@ include_directories( include )
 ## Set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-add_library( ${PROJECT_NAME} ${SOURCE_FILES} )
-
-## Link the library with whatever Qt libraries have been defined by
-## the ``find_package(Qt4 ...)`` line above.
-##
-## Although this puts "rviz_plugin_tutorials" (or whatever you have
-## called the project) as the name of the library, cmake knows it is a
-## library and names the actual file something like
-## "librviz_plugin_tutorials.so", or whatever is appropriate for your
-## particular OS.
-target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} )
+add_library(${PROJECT_NAME} ${SOURCE_FILES} )
+add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${catkin_LIBRARIES})
